# 03-macros

./: Cargo.toml  cliff.toml
examples/: my_ready.rs  my_try.rs  my_vec.rs
src/: lib.rs
