[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["extra-traits"] }

[dev-dependencies]
anyhow = "1.0.89"
features = "0.10.0"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
